fix this for fall 2022

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-coursename: "601.229 (S22)"
-baseurl: "/spring2022"
+coursename: "601.229 (F22)"
+baseurl: "/fall2022"
 markdown: kramdown
 highlighter: rouge
